@@ -1,3 +1,7 @@
+drkns 16.05.2017 07:34:39 +0000 - build 4962
+
+1. Уточение процесса загрузки плагинов.
+
 drkns 15.05.2017 14:39:00 +0000 - build 4961
 
 1. Продолжение 4959 - отображением ошибок загрузки плагинов теперь заведует соответствующий загрузчик,
